// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render as NO favorite product and show snapshot 1`] = `
<div>
  <div
    class="relative shadow-sm p-1 bg-white border border-gray-200 rounded-lg"
  >
    <div
      class="absolute right-0 z-1"
    >
      <svg
        class="h-8 w-8 text-red-500 hover:fill-red-500 hover:cursor-pointer"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
      >
        <path
          d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </div>
    <div
      class="h-80 flex justify-center mt-2 mb-1"
    >
      <img
        class="max-w-full max-h-full m-auto"
        src="test"
      />
    </div>
    <div
      class="space-y-0.5"
    >
      <p>
        T-shirt
      </p>
      <p
        class="text-right font-bold mr-1.5 text-lg"
      >
        $
        12
      </p>
    </div>
  </div>
</div>
`;

exports[`should render as favorite product and show snapshot 1`] = `
<div>
  <div
    class="relative shadow-sm p-1 bg-white border border-gray-200 rounded-lg"
  >
    <div
      class="absolute right-0 z-1"
    >
      <svg
        class="h-8 w-8 text-red-500 hover:fill-red-500 hover:cursor-pointer"
        fill="var(--color-red-500)"
        stroke="currentColor"
        viewBox="0 0 24 24"
      >
        <path
          d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </div>
    <div
      class="h-80 flex justify-center mt-2 mb-1"
    >
      <img
        class="max-w-full max-h-full m-auto"
        src="test"
      />
    </div>
    <div
      class="space-y-0.5"
    >
      <p>
        T-shirt
      </p>
      <p
        class="text-right font-bold mr-1.5 text-lg"
      >
        $
        12
      </p>
    </div>
  </div>
</div>
`;
